# cblicense

./: .gitignore  CMakeLists.txt  LICENSE  README.md  library.json  library.properties
docs/: API.md  INTEGRATION.md  THREAT_MODEL.md
examples/: cbcontroller_integration.cpp
examples/esp32-license-smoke/: esp32-license-smoke.ino
include/cblicense/: cblicense.h
src/: cbl_base32.c  cbl_base32.h  cbl_core.c  cbl_hmac.c  cbl_hmac.h  cbl_sha256.c  cbl_sha256.h
tests/: test_base32.c  test_core.c  test_fingerprint.c  test_helpers.h  test_hmac.c  test_sha256.c
tools/: .gitignore  README.md  cbl_fingerprint.c  cbl_mint.c  cbl_verify.c  fingerprint.py  keygen.py  make-binary.sh  mint.py  tunnel-key.py
